<resources>
    <string name="app_name">易成</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_text">请输入验证码</string>
    <string name="forget_password">忘记密码</string>
    <string name="login_password">帐号密码登录</string>
    <string name="get_text">获取验证码</string>
    <string name="confirm_password">请确认密码</string>
    <string name="input_password">请输入密码</string>
    <string name="password_length">请输入6-20位密码</string>
    <string name="mine">我的</string>
    <string name="mall">商城</string>
    <string name="home">首页</string>
    <string name="navigator">导航</string>
    <string name="add_oil">一键加油</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>