<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_24" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_gravity="center"
            android:textSize="22sp"
            android:textColor="@color/black" />
    </androidx.appcompat.widget.Toolbar>

    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="35dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="38dp"
            android:layout_marginRight="35dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@null"
            android:hint="@string/input_phone"
            android:inputType="phone"
            android:lines="1"
            android:textColor="@color/black" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="38dp"
        android:background="@color/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="38dp"
            android:layout_marginLeft="40dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/input_text"
            android:textColor="@color/black"
            android:lines="1"
            android:inputType="number" />

        <Button
            android:id="@+id/get_text"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginRight="38dp"
            android:layout_marginTop="2dp"
            android:textSize="13sp"
            android:background="@drawable/shape_rectangle"
            android:text="@string/get_text"
            android:layout_marginEnd="38dp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="1dp"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="38dp"
        android:background="@color/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="38dp"
            android:layout_marginRight="35dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@null"
            android:hint="@string/password_length"
            android:inputType="phone"
            android:lines="1"
            android:textColor="@color/black" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="38dp"
        android:background="@color/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="38dp"
            android:layout_marginRight="35dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@null"
            android:hint="@string/confirm_password"
            android:inputType="phone"
            android:lines="1"
            android:textColor="@color/black" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="38dp"
        android:background="@color/divider" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="35dp"
        android:layout_marginLeft="35dp"
        android:text="@string/register"
        android:textSize="17dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@drawable/shape_rectangle"
        android:backgroundTint="@color/colorPrimary"/>

</LinearLayout>