<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="85dp"
    android:clipChildren="false">

    <LinearLayout
        android:id="@+id/lin"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal"
        android:elevation="10dp"
        android:background="@color/white"
        android:gravity="bottom"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:id="@+id/ll_tab_one"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_tab_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/tab_home" />

            <TextView
                android:id="@+id/tv_tab_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="3dp"
                android:text="@string/home"
                android:textColor="@color/tab_grey" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_tab_two"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/iv_tab_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/tab_explore"/>
            <TextView
                android:id="@+id/tv_tab_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="3dp"
                android:textColor="@color/tab_grey"
                android:text="@string/navigator"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_tab_three"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/iv_tab_three"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:src="@drawable/icon_banner_logo_new" />
            <TextView
                android:id="@+id/tv_tab_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="3dp"
                android:textColor="@color/tab_grey"
                android:text="@string/add_oil"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_tab_four"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/iv_tab_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/tab_shopping_cart"/>
            <TextView
                android:id="@+id/tv_tab_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="3dp"
                android:textColor="@color/tab_grey"
                android:text="@string/mall"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_tab_five"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/iv_tab_five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/tab_person"/>
            <TextView
                android:id="@+id/tv_tab_five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="3dp"
                android:textColor="@color/tab_grey"
                android:text="@string/mine"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>