<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_24" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_gravity="center"
            android:textSize="22sp"
            android:textColor="@color/black" />
        <TextView
            android:id="@+id/Register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="17sp"
            android:layout_gravity="end"
            android:layout_marginRight="15dp"
            android:textColor="@color/colorPrimary"
            android:layout_marginEnd="15dp" />
    </androidx.appcompat.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/grey"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:src="@drawable/icon_banner_logo_new"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="38dp"
            android:layout_marginRight="35dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@null"
            android:hint="@string/input_phone"
            android:inputType="phone"
            android:lines="1"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/clear_button"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginRight="50dp"
            android:background="@drawable/ic_baseline_clear_24"
            android:onClick="clear"
            android:visibility="invisible"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="38dp"
        android:background="@color/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="38dp"
            android:layout_marginLeft="40dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/input_text"
            android:textColor="@color/black"
            android:lines="1"
            android:inputType="number" />

        <Button
            android:id="@+id/get_text"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginRight="38dp"
            android:layout_marginTop="2dp"
            android:textSize="13sp"
            android:background="@drawable/shape_rectangle"
            android:text="@string/get_text"
            android:layout_marginEnd="38dp"/>

        <Button
            android:id="@+id/is_visibility"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="4dp"
            android:textSize="13sp"
            android:background="@drawable/ic_baseline_visibility_24"
            android:onClick="setIsVisibility1"
            android:layout_marginEnd="50dp"
            android:visibility="gone"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="1dp"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="38dp"
        android:background="@color/divider" />

    <LinearLayout
        android:id="@+id/forget_password1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:visibility="gone">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="38dp"
            android:layout_marginLeft="40dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/input_password"
            android:textColor="@color/black"
            android:lines="1"
            android:inputType="number" />

        <Button
            android:id="@+id/is_visibility2"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="4dp"
            android:textSize="13sp"
            android:background="@drawable/ic_baseline_visibility_24"
            android:onClick="setIsVisibility2"
            android:layout_marginEnd="50dp"
            tools:ignore="DuplicateIds" />

    </LinearLayout>

    <View
        android:visibility="gone"
        android:id="@+id/forget_password2"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="1dp"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="38dp"
        android:background="@color/divider" />

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/forget_password3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="38dp"
            android:layout_marginLeft="40dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/confirm_password"
            android:textColor="@color/black"
            android:lines="1"
            android:inputType="number" />


        <Button
            android:id="@+id/is_visibility3"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="4dp"
            android:textSize="13sp"
            android:background="@drawable/ic_baseline_visibility_24"
            android:onClick="setIsVisibility3"
            android:layout_marginEnd="50dp"
            tools:ignore="DuplicateIds" />

    </LinearLayout>

    <View
        android:visibility="gone"
        android:id="@+id/forget_password4"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="1dp"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="38dp"
        android:background="@color/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/set_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                android:onClick="changePassword"
                android:layout_gravity="left"
                android:textColor="@color/colorPrimary"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="5dp"
                android:textSize="15sp"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/text_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_password"
                android:onClick="onSwitch"
                android:layout_gravity="right"
                android:textColor="@color/colorPrimary"
                android:layout_marginRight="35dp"
                android:layout_marginTop="5dp"
                android:textSize="15sp"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="35dp"
        android:layout_marginLeft="35dp"
        android:text="@string/login"
        android:textSize="17dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@drawable/shape_rectangle"
        android:backgroundTint="@color/colorPrimary"/>


</LinearLayout>